# packages/i18n/src/resources.ts
@@ -16,6 +16,7 @@ const loaders = {
     "admin-scheduling": () => import("./locales/ca/admin-scheduling.json"),
     "admin-settings": () => import("./locales/ca/admin-settings.json"),
     auth: () => import("./locales/ca/auth.json"),
+    booking: () => import("./locales/ca/booking.json"),
     census: () => import("./locales/ca/census.json"),
     common: () => import("./locales/ca/common.json"),
     enums: () => import("./locales/ca/enums.json"),
@@ -36,6 +37,7 @@ const loaders = {
     "admin-scheduling": () => import("./locales/en/admin-scheduling.json"),
     "admin-settings": () => import("./locales/en/admin-settings.json"),
     auth: () => import("./locales/en/auth.json"),
+    booking: () => import("./locales/en/booking.json"),
     census: () => import("./locales/en/census.json"),
     common: () => import("./locales/en/common.json"),
     enums: () => import("./locales/en/enums.json"),
@@ -56,6 +58,7 @@ const loaders = {
     "admin-scheduling": () => import("./locales/es/admin-scheduling.json"),
     "admin-settings": () => import("./locales/es/admin-settings.json"),
     auth: () => import("./locales/es/auth.json"),
+    booking: () => import("./locales/es/booking.json"),
     census: () => import("./locales/es/census.json"),
     common: () => import("./locales/es/common.json"),
     enums: () => import("./locales/es/enums.json"),
